--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,22 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<html>
+<head>
+    <title>Second</title>
+    <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+    <div class="first">
+        <div id="purple"></div>
+        <div id="green"></div>
+        <div id="circle"></div>
+    </div>
+    <div class="second">
+        <div id="shadow"></div>
+    </div>
+    <div class="third">
+        <h1>HELLO FRIENDS</h1>
+    </div>
+</body>
+<footer>
+
+</footer>
+</html>
