--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,12 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>First</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+<body>
+    <div class="top"></div>
+    <div class="middle"></div>
+    <div class="bottom"></div>
+</body>
+</html>
