--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,19 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Third</title>
+    <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+    <div class="rect-one">
+        <div id="blue-square"></div>
+    </div>
+    <div class="rect-two">
+        <p>Consider hiding the status bar -- and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.</p>
+    </div>
+    <div class="rect-three"></div>
+    <div class="rect-four"></div>
+    <div class="rect-five"></div>
+    <div class="rect-six"></div>
+</body>
+</html>
